<resources>
    <string name="app_name">DropLock</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Welcome To Droplock!</string>
    <string name="muzzle_vel">Muzzle Velocity</string>
    <string name="target_distance">Target Distance</string>
    <string name="calc_button">Calculate!</string>
    <string name="metric"></string>
    <string name="switch1">UNITS</string>
    <string name="result">Bullet Drop in meters</string>
    <string name="input1"></string>
    <string name="input2"></string>

</resources>
