<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zentek.ethan.droplock.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/app_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muzzle_vel"
        android:id="@+id/muzzle_vel"
        android:layout_below="@+id/app_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:layout_alignRight="@+id/app_title"
        android:layout_alignEnd="@+id/app_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_distance"
        android:id="@+id/target_distance"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/muzzle_vel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input1"
        android:layout_below="@+id/muzzle_vel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/input1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input2"
        android:layout_below="@+id/target_distance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/input2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button"
        android:id="@+id/calc_button"
        android:layout_below="@+id/target_distance"
        android:layout_toRightOf="@+id/input2"
        android:layout_toEndOf="@+id/input2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="14"
        android:id="@+id/result"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/calc_button"
        android:layout_alignLeft="@+id/calc_button"
        android:layout_alignStart="@+id/calc_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bullet Drop in meters:"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
